<resources>
    <string name="app_name">Zappy</string>

    <!-- Tiện ích screen -->
    <string name="tien_ich">Tiện ích</string>
    <string name="quan_ly_tai_khoan">Quản lý tài khoản</string>
    <string name="user_name">Nguyễn Văn Z</string>
    <string name="bao_mat_tai_khoan">Bảo mật &amp; Tài khoản</string>
    <string name="doi_mat_khau">Đổi mật khẩu</string>
    <string name="doi_mat_khau_desc">Cập nhật mật khẩu định kỳ để bảo vệ tài khoản</string>
    <string name="dang_xuat">Đăng xuất</string>

    <!-- Bottom Navigation -->
    <string name="nav_order">Order</string>
    <string name="nav_so_do">Sơ đồ</string>
    <string name="nav_tien_ich">Tiện ích</string>

    <!-- Change Password screen -->
    <string name="doi_mat_khau_title">Đổi mật khẩu</string>
    <string name="doi_mat_khau_subtitle">Vui lòng nhập mật khẩu hiện tại và mật khẩu mới của bạn để đảm bảo an toàn cho tài khoản.</string>
    <string name="mat_khau_hien_tai">Mật khẩu hiện tại</string>
    <string name="hint_mat_khau_hien_tai">Nhập mật khẩu hiện tại</string>
    <string name="mat_khau_moi">Mật khẩu mới</string>
    <string name="hint_mat_khau_moi">Nhập mật khẩu mới</string>
    <string name="xac_nhan_mat_khau_moi">Xác nhận mật khẩu mới</string>
    <string name="hint_xac_nhan_mat_khau">Nhập lại mật khẩu mới</string>
    <string name="cap_nhat_mat_khau">Cập nhật mật khẩu</string>

    <!-- Sign up and sign in screen-->
    <string name="restaurant_name_label">Tên nhà hàng</string>
    <string name="manager_name_label">Họ và tên người quản lý</string>
    <string name="email_label">Email</string>
    <string name="admin_username_label">Username (Admin)</string>
    <string name="restaurant_address_label">Địa chỉ nhà hàng</string>
    <string name="signup_subtitle">Tạo tài khoản quản lý nhà hàng</string>
    <string name="restaurant_name_hint">VD: The Continental</string>
    <string name="restaurant_username_hint">thecontinental</string>
    <string name="restaurant_url_suffix">.zappy</string>
    <string name="restaurant_url_desc">Đây sẽ là đường dẫn truy cập riêng của nhà hàng.</string>
    <string name="email_hint">lmao2005@gmail.com</string>
    <string name="admin_username_hint">admin</string>
    <string name="restaurant_address_hint">Số nhà, đường, quận/huyện...</string>
    <string name="signup_button_label">Đăng ký</string>
    <string name="already_have_account_label">Đã có tài khoản?</string>
    <string name="login_label">Đăng nhập</string>
    <string name="signup_label">Đăng ký</string>

    <string name="login_subtitle">Quản lý nhà hàng của bạn một cách dễ dàng.</string>
    <string name="restaurant_login_name_label">Tên đăng nhập nhà hàng</string>
    <string name="user_name_label">Tên người dùng</string>
    <string name="password_label">Mật khẩu</string>
    <string name="forget_password_label">Quên mật khẩu ?</string>
    <string name="question_label">Chưa có tài khoản ? </string>
    <string name="call_to_action_label">Đăng ký ngay</string>
    <string name="user_name_hint">tên người dùng</string>
    <string name="password_hint">••••••••</string>
    <string name="login_button_label">Đăng nhập</string>
    <string name="password_again_label">Nhập lại mật khẩu</string>
    <!-- Forget password screen-->
    <string name="forget_password_subtitle">Nhập email của bạn để nhận mã khôi phục mật khẩu.</string>
    <string name="send_validate">Gửi mã xác nhận</string>
    <string name="return_to_login">Quay lại trang đăng nhập</string>
    <!-- Validate otp screen -->
    <string name="otp1">-</string>
    <string name="otp2">-</string>
    <string name="otp3">-</string>
    <string name="otp4">-</string>
    <string name="otp5">-</string>
    <string name="otp6">-</string>
    <string name="resent_countdown">(00:59)</string>
    <string name="confirm">Xác nhận</string>
    <string name="otp_title">Xác thực OTP</string>
    <string name="otp_subtitle">Đã gửi mã xác thực tới email của bạn</string>
    <string name="not_recive_otp_question">Chưa nhận được mã ?</string>
    <string name="resent_command">Gửi lại mã</string>
    <!-- Set new password screen   -->
    <string name="set_new_password_title">Đặt lại mật khẩu</string>
    <string name="set_new_password_subtitle">Vui lòng nhập mật khẩu mới của bạn để&#10;hoàn tất việc khôi phục tài khoản.</string>


    <!-- Thống kê doanh thu screen -->
    <string name="title_thong_ke">Thống kê doanh thu</string>
    <string name="tab_hom_nay">Hôm nay</string>
    <string name="tab_tuan_nay">Tuần này</string>
    <string name="tab_thang_nay">Tháng này</string>
    <string name="label_tong_doanh_thu">TỔNG DOANH THU</string>
    <string name="format_tien_te">%1$s đ</string> <!-- Dùng để format 15.250.000 đ -->
    <string name="format_growth">%1$s so với hôm qua</string>
    <string name="label_tong_don_hang">Tổng đơn hàng</string>
    <string name="label_mon_da_huy">Món đã hủy</string>
    <string name="label_ban_chua_thanh_toan">Bàn chưa thanh toán</string>
    <string name="format_don_hang">%1$d đơn</string>
    <string name="format_mon">%1$d món</string>
    <string name="format_ban">%1$d bàn</string>

    <!-- Quản lý nhân viên screen -->
    <string name="title_quan_ly_nhan_vien">Quản lý nhân viên</string>
    <string name="hint_tim_nhan_vien">Tìm nhân viên...</string>

    <string name="tab_tat_ca">Tất cả</string>
    <string name="tab_admin">Admin</string>
    <string name="tab_quan_ly">Quản lý</string>
    <string name="tab_thu_ngan">Thu ngân</string>
    <string name="tab_phuc_vu">Phục vụ</string>
    <string name="tab_bep">Bếp</string>

    <string name="label_tong_so">Tổng số</string>
    <string name="label_online">Online</string>
    <string name="label_offline">Offline</string>

    <string name="label_them_nhan_vien">Thêm nhân viên</string>

    <!-- Bottom Navigation Quản lý nhân viên screen -->
    <string name="nav_tables">Tables</string>
    <string name="nav_orders">Orders</string>
    <string name="nav_menu">Menu</string>
    <string name="nav_more">More</string>

    <!-- Trạng thái chi tiết trong item list -->
    <string name="status_online">đang online</string>
    <string name="status_working">đang làm việc</string>
    <string name="status_offline_detail">Offline</string>

    <!-- Chi tiết nhân viên screen -->
    <string name="title_chi_tiet_nhan_vien">Chi tiết nhân viên</string>
    <string name="label_dang_lam">ĐANG LÀM</string>
    <string name="label_phuc_vu_fulltime">Phục vụ • Full-time</string>
    <string name="label_so_gio_lam">Số giờ làm</string>
    <string name="label_don_hang">Đơn hàng</string>
    <string name="label_danh_gia">Đánh giá</string>
    <string name="title_thong_tin_ca_nhan">Thông tin cá nhân</string>
    <string name="label_ma_nhan_vien">Mã nhân viên</string>
    <string name="label_so_dien_thoai">Số điện thoại</string>
    <string name="label_email">Email</string>
    <string name="label_dia_chi">Địa chỉ</string>
    <string name="title_chi_tiet_cong_viec">Chi tiết công việc</string>
    <string name="label_bo_phan">Bộ phận</string>
    <string name="label_ngay_gia_nhap">Ngày gia nhập</string>
    <string name="label_muc_luong">Mức lương</string>
    <string name="btn_phan_ca">Phân ca làm việc</string>
    <string name="btn_xem_lich_su">Xem lịch sử</string>

    <!-- Thêm nhân viên screen -->
    <string name="title_them_nhan_vien">Thêm nhân viên</string>
    <string name="label_tai_anh_len">Tải ảnh lên</string>
    <string name="label_ho_va_ten">Họ và tên</string>
    <string name="hint_ho_va_ten">Nhập tên nhân viên</string>
    <string name="label_so_dien_thoai_input">Số điện thoại</string>
    <string name="hint_so_dien_thoai">Nhập số điện thoại</string>
    <string name="label_ten_dang_nhap">Tên đăng nhập</string>
    <string name="hint_ten_dang_nhap">vd: nhanvien01</string>
    <string name="label_mat_khau">Mật khẩu</string>
    <string name="label_phan_quyen">Phân quyền vị trí</string>
    <string name="label_trang_thai_hoat_dong">Trạng thái hoạt động</string>
    <string name="btn_xac_nhan_them">Xác nhận thêm</string>
</resources>